--- a/webscrape_2.ipynb
+++ b/webscrape_2.ipynb
@@ -70,9 +70,9 @@
         "  res = requests.get(scrape_url)\n",
         "  soup = bs4.BeautifulSoup(res.text,'lxml')\n",
         "  books = soup.select(\".product_pod\")\n",
-        "  # within our loop, we'll create another loop to parse the books and select star rating five.\n",
+        "  # within our loop, we'll create another loop to parse the books and select star rating one.\n",
         "  for book in books:\n",
-        "    if len(book.select('.star-rating.One')) != 0: # if the list is not empty, then we do have a 5 star book. Could also use if 'star-rating Five' in str(book)\n",
+        "    if len(book.select('.star-rating.One')) != 0: # if the list is not empty, then we do have a 1 star book. Could also use if 'star-rating one' in str(book)\n",
         "      book_title = book.select('a')[1]['title']\n",
         "      one_star_titles.append(book_title)\n",
         "\n",
